@@ -13,7 +13,6 @@ if ((logged_in())&& (!isset($strConn)))
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Hồ sơ cá nhân</title>
 <!-- InstanceEndEditable -->
-
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 <?php echo'<link href="Theme/Default/style.css" rel="stylesheet" type="text/css" />'; ?>
@@ -549,7 +548,8 @@ if ((logged_in())&& (!isset($strConn)))
 	}
 	?>
   </p>
-<!-- InstanceEndEditable -->	</td>
+<!-- InstanceEndEditable -->	
+	</td>
     <td width="30%" align="center" valign="top" bgcolor="#CCCC66"><?php
 		if (logged_in())
 		{
@@ -577,7 +577,7 @@ if ((logged_in())&& (!isset($strConn)))
 			}
 		}
 		echo "<a href=\"account.php?type=change\"> Thay đổi thông tin cá nhân </a><br>";			
-	
+		if ($arrUserData['admin']){echo "<a href=\"admin.php\"> Gửi email nhắc việc tới suppliers </a>";}
 			//////// Close connection to database /////////
 			include "dbclose.php";
 		}
